# claude-schedule

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
claude_schedule/: __init__.py  __main__.py  cli.py  doctor.py  environment.py  hook.py  jobspec.py  registry.py  runner.py
claude_schedule/backends/: __init__.py  base.py  cron.py  launchd.py  systemd.py  wake.py  windows.py
commands/: claude-schedule.md
docs/: architecture.md  seamless-wrapper.md  troubleshooting.md
hooks/: hooks.json
scripts/: hook.py  hook.sh
skills/claude-schedule/: SKILL.md  reference.md
tests/: test_backends.py  test_cron.py  test_hook.py  test_jobspec.py  test_launchd.py  test_registry.py  test_runner.py  test_wake.py
