[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-schedule"
version = "0.1.0"
description = "Run Claude Code jobs on a local schedule — your machine wakes, runs the job, and goes back to sleep."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Michael Kosoy" }]
keywords = ["claude", "claude-code", "scheduler", "cron", "launchd", "automation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
# No runtime dependencies on purpose: stdlib only, so it installs anywhere Python does.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "mypy>=1.5", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/michaelk-entitle/claude-schedule"
Issues = "https://github.com/michaelk-entitle/claude-schedule/issues"

[project.scripts]
claude-schedule = "claude_schedule.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_schedule"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
